--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "formet": "prettier --write *.js"
+    "formet": "prettier --write *.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Ampuchinee Yodthaisong",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "prettier": "^3.4.2"
   },
   "dependencies": {
